--- a/source/index.html
+++ b/source/index.html
@@ -21,7 +21,7 @@
         <div class="main-navigation__wrapper">
           <ul class="main-navigation__list">
             <li class="main-navigation__item main-navigation__item--active">
-              <a class="main-navigation__link main-navigation__link--active" href="#">Главная</a>
+              <a class="main-navigation__link main-navigation__link--active">Главная</a>
             </li>
             <li class="main-navigation__item">
               <a class="main-navigation__link" href="photo.html">Наши работы</a>
@@ -201,7 +201,7 @@
         </div>
       </footer>
 
-      <section class="modal-login">
+      <section class="modal-login modal-login--closed">
         <div class="modal-login__wrapper">
           <h2 class="modal-login__headline">Личный кабинет</h2>
           <p class="modal-login__description">Введите свой логин и пароль, чтобы войти</p>
